# airbnb-portfolio-project

./: README.md  airbnb_data.ipynb  pyproject.toml  requirements.txt
portfolio_project/: airbnb_data.ipynb
